fix: source control badge text cut off with more than 10 changed files (#4656)

--- a/static/css/parts/Badge.css
+++ b/static/css/parts/Badge.css
@@ -6,8 +6,9 @@
   font-size: 11px;
   font-weight: 400;
   height: 18px;
-  width: 18px;
+  min-width: 18px;
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-inline: 3px;
 }
